vbnc/vbnc/tests/Errors/32050-1.vb
Module ArgumentTypeInference
    Sub a(Of T, U)(ByVal b As T)
        a(1)
    End Sub
End Module